<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="welcome_title">Добро пожаловать\n в MovieCatalog</string>
    <string name="sign_in_title">Вход в аккаунт</string>
    <string name="register_string">Регистрация</string>
    <string name="feed_menu">Лента</string>
    <string name="films_menu">Фильмы</string>
    <string name="favourite_menu">Избранное</string>
    <string name="profile_menu">Профиль</string>
    <string name="favorite_movies_screen">Мне нравится</string>
    <string name="all_movies_screen">Все</string>
    <string name="random_movie_screen">Случайный фильм</string>
    <string name="watch_movie_screen">Смотреть</string>
    <string name="all_films_movies_screen">Все фильмы</string>
    <string name="friends_screen">Мои друзья</string>
    <string name="enter_welcome">Войти в аккаунт</string>
    <string name="register_welcome">Зарегистрироваться</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="error_sign_in">Ошибка при входе. Проверьте данные.</string>
    <string name="error_sign_up">Ошибка при регистрации. Попробуйте еще раз.</string>
</resources>