<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bacgkground_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/manrope_bold"
        android:gravity="start"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/welcome_title"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/orange_gradient"
            android:backgroundTint="@null"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/enter_welcome"
            android:textAllCaps="false"
            android:padding="0dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_input"
            android:fontFamily="@font/manrope_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register_welcome"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:cornerRadius="7dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


