<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="628dp"
            android:scaleType="fitXY"
            android:src="@drawable/background_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/BackButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_shape"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/sign_in_title"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_shape"
                android:fontFamily="@font/manrope_medium"
                android:gravity="center_vertical"
                android:hint="@string/hint_login"
                android:inputType="text"
                android:textSize="14sp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="14dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:background="@drawable/edit_shape"
                android:fontFamily="@font/manrope_medium"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:paddingVertical="14dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_text" />

            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/manrope_medium"
                android:textSize="14sp"
                android:text="@string/error_sign_in"
                android:textColor="@color/red"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@null"
                android:fontFamily="@font/manrope_bold"
                android:paddingVertical="14dp"
                android:textAllCaps="false"
                android:text="Войти"
                android:textColor="@color/hint_text"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/orange" />
    </FrameLayout>
</FrameLayout>