<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="392dp"
            android:layout_height="385dp"
            app:layout_constraintBottom_toTopOf="@+id/random_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/favorites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/favorite_movies_screen"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/favorite_carousel"
            app:layout_constraintEnd_toStartOf="@+id/all_button"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_button"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/random_button"
            android:layout_width="363dp"
            android:layout_height="97dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/orange_gradient"
            android:drawableLeft="@drawable/game_die"
            android:fontFamily="@font/manrope_bold"
            android:paddingHorizontal="15dp"
            android:text="@string/random_movie_screen"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/favorite_carousel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/all_button"
            style="@null"
            android:layout_width="91dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:backgroundTint="@color/background"
            android:fontFamily="@font/manrope_bold"
            android:paddingTop="8dp"
            android:stateListAnimator="@null"
            android:text="@string/all_movies_screen"
            android:textColor="@color/desc"
            android:textSize="20sp"
            android:theme="@null"
            app:layout_constraintBottom_toTopOf="@+id/favorite_carousel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_button"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favorite_carousel"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.584"
            tools:layout_editor_absoluteX="0dp">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
